--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h2>Contato</h2>
     <p>
       Para dúvidas sobre esta política, entre em contato pelo e-mail:
-      <strong>contato@seudominio.com</strong>
+      <strong>copytradebrasil@gmail.com</strong>
     </p>
   </body>
 </html>
